# GraphicPlots

./: CMakeLists.txt  CMakeSettings.json  main.cpp
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
docs/: guide.typ
shaders/: AreaFragment.fs  AreaGeometry.gs  AreaVertex.vs  HeatMapKDE.fs  HeatMapKDE.vs  LineFragment.fs  LineGeometry.gs  LineVertex.vs  SegmentVertex.vs  text.fs  tmp.fs  tmp.vs
src/: basics.cpp  basics.h
